# ids-clearing-house-core

./: .gitignore  Cargo.toml  README.md  core.Dockerfile  doc-api.Dockerfile  key-api.Dockerfile
.github/workflows/: rust.yml
core-lib/: Cargo.toml  config.yml
core-lib/src/: constants.rs  lib.rs  util.rs
core-lib/src/api/: auth.rs  claims.rs  mod.rs
core-lib/src/api/client/: daps_api.rs  document_api.rs  keyring_api.rs  mod.rs
core-lib/src/db/: mod.rs
core-lib/src/model/: crypto.rs  document.rs  mod.rs  process.rs  tests.rs
core-lib/tests/integration/: daps_api_client.rs  document_api_client.rs  keyring_api_client.rs  main.rs  token_validation.rs
docker/: document-api-multistage.Dockerfile  document-api.Dockerfile  keyring-api-multistage.Dockerfile  keyring-api.Dockerfile  supervisord-keyring-api.conf
document-api/: Cargo.toml  Rocket.toml  config.yml  supervisord.conf
document-api/src/: doc_api.rs  main.rs
document-api/src/db/: mod.rs
keyring-api/: Cargo.toml  Rocket.toml  config.yml
keyring-api/src/: crypto.rs  main.rs  tests.rs
keyring-api/src/api/: doc_type_api.rs  key_api.rs
keyring-api/src/db/: doc_type.rs  mod.rs  tests.rs
keyring-api/src/model/: doc_type.rs  mod.rs
