[package]
name = "core-lib"
version = "0.7.0"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
]
edition = "2018"

[dependencies]
aes = "0.6.0"
aes-gcm-siv = "0.9.0"
biscuit = "0.5.0"
base64 = "0.9.3"
blake2-rfc = "0.2.18"
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.4"
fern = "0.5"
figment = { version = "0.10", features = ["yaml", "env"] }
generic-array = "0.14.4"
hex = "0.4.2"
log = "0.4"
mongodb ="2.0.1"
percent-encoding = "2.1.0"
reqwest = "0.9.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
