[package]
name = "document-api"
version = "0.5.2"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
]
edition = "2018"

[dependencies]
biscuit = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.2"
fern = "0.5"
hex = "0.4.2"
log = "0.4"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
rocket_cors = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
core-lib = {path = "../core-lib"}
