[package]
name = "keyring-api"
version = "0.5.2"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>"
]
edition = "2018"

[dependencies]
aes = "0.6.0"
aes-gcm-siv = "0.9.0"
biscuit = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
core-lib = {path = "../core-lib"}
error-chain = "0.12.4"
fern = "0.5"
generic-array = "0.14.4"
hex = "0.4.3"
hkdf = "0.10.0"
log = "0.4"
mongodb = "0.3.12"
openssl = "0.10.32"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.3"

